<resources>
    <string name="app_name">美图看看</string>
    <string name="navigation_header1">头条女神</string>
    <string name="navigation_header2">性感尤物</string>
    <string name="navigation_header3">推女神</string>
    <string name="navigation_header4">爱丝</string>
    <string name="navigation_header5">推女郎</string>
    <string name="navigation_header6">打赏一下</string>
    <string name="navigation_header7">给个好评</string>
    <string name="navigation_header8">设置</string>
    <string name="navigation_header9">关于我们</string>

    <string name="home_model_1">性感\n美女</string>
    <string name="home_model_2">少女\n萝莉</string>
    <string name="home_model_3">美乳\n香臀</string>
    <string name="home_model_4">丝袜\n美腿</string>
    <string name="home_model_5">性感\n特写</string>
    <string name="home_model_6">欧美\n女神</string>
    <string name="home_model_7">女神\n集合</string>
    <string name="home_model_8">肌肉\n猛男</string>
    <string name="home_model_9">魅力\n型男</string>
    <string name="home_model_10">花美\n鲜肉</string>

    <string name="Logo_text">最新、最热、高清美图</string>
    <string name="home_text_1">最新美图</string>
    <string name="home_more">更多</string>
    <string name="home_checkmore">查看更多美图</string>

    <string name="Error_Timeout">网络连接超时，请重试</string>
    <string name="Error_Faile">加载失败,点击重试</string>
    <string name="NO_MORE">没有更多数据了</string>
    <string name="NO_DATA">暂无数据</string>
    <string name="Loading">努力加载中...</string>
    <string name="pleasewait">敬请期待</string>
    <string name="pleaseanother">美图木有了，看看别的吧</string>

    <string name="transitional_image">the image of transition</string>
    <string name="image_index">%1$d/%2$d</string>
</resources>
