<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPageBg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPageBg"
            android:orientation="vertical">

            <!--头布局-->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <ImageView
                    android:id="@+id/image_head"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"/>

            </FrameLayout>
            <!--菜单布局-->
            <LinearLayout
                android:id="@+id/ll_nav_1"
                style="@style/Draw_Navi_Style">

                <ImageView
                    android:id="@+id/image_nav1"
                    style="@style/Draw_Navie_Image"/>

                <TextView
                    android:id="@+id/text_nav1"
                    style="@style/Draw_Navi_Text"
                    android:text="@string/navigation_header1"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_nav_2"
                style="@style/Draw_Navi_Style">

                <ImageView
                    android:id="@+id/image_nav2"
                    style="@style/Draw_Navie_Image"/>

                <TextView
                    android:id="@+id/text_nav2"
                    style="@style/Draw_Navi_Text"
                    android:text="@string/navigation_header2"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_nav_3"
                style="@style/Draw_Navi_Style">

                <ImageView
                    android:id="@+id/image_nav3"
                    style="@style/Draw_Navie_Image"/>

                <TextView
                    android:id="@+id/text_nav3"
                    style="@style/Draw_Navi_Text"
                    android:text="@string/navigation_header3"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_nav_4"
                style="@style/Draw_Navi_Style">

                <ImageView
                    android:id="@+id/image_nav4"
                    style="@style/Draw_Navie_Image"/>

                <TextView
                    android:id="@+id/text_nav4"
                    style="@style/Draw_Navi_Text"
                    android:text="@string/navigation_header4"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_nav_5"
                style="@style/Draw_Navi_Style">

                <ImageView
                    android:id="@+id/image_nav5"
                    style="@style/Draw_Navie_Image"/>

                <TextView
                    android:id="@+id/text_nav5"
                    style="@style/Draw_Navi_Text"
                    android:text="@string/navigation_header5"/>

            </LinearLayout>

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorNavLine"/>

            <LinearLayout
                android:id="@+id/ll_nav_6"
                style="@style/Draw_Navi_Style">

                <ImageView
                    android:id="@+id/image_nav6"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@color/colorLogo50"
                    android:src="@drawable/ic_attach_money_white_24dp"/>

                <TextView
                    android:id="@+id/text_nav6"
                    style="@style/Draw_Navi_Text"
                    android:text="@string/navigation_header6"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_nav_7"
                style="@style/Draw_Navi_Style"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/image_nav7"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@color/colorLogo50"
                    android:src="@drawable/ic_thumb_up_white_24dp"/>

                <TextView
                    android:id="@+id/text_nav7"
                    style="@style/Draw_Navi_Text"
                    android:text="@string/navigation_header7"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_nav_8"
                style="@style/Draw_Navi_Style">

                <ImageView
                    android:id="@+id/image_nav8"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@color/colorLogo50"
                    android:src="@drawable/ic_settings_white_24dp"/>

                <TextView
                    android:id="@+id/text_nav8"
                    style="@style/Draw_Navi_Text"
                    android:text="@string/navigation_header8"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_nav_9"
                style="@style/Draw_Navi_Style">

                <ImageView
                    android:id="@+id/image_nav9"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@color/colorLogo50"
                    android:src="@drawable/ic_person_white_24dp"/>

                <TextView
                    android:id="@+id/text_nav9"
                    style="@style/Draw_Navi_Text"
                    android:text="@string/navigation_header9"/>

            </LinearLayout>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>