<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        style="@style/MatchMatch">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_model_1"
                        style="@style/Home_TextStyle"
                        android:text="@string/home_model_1"/>

                    <TextView
                        android:id="@+id/text_model_1_more"
                        style="@style/Home_MoreStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerview_model_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_model_2"
                        style="@style/Home_TextStyle"
                        android:text="@string/home_model_2"/>

                    <TextView
                        android:id="@+id/text_model_2_more"
                        style="@style/Home_MoreStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerview_model_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_model_3"
                        style="@style/Home_TextStyle"
                        android:text="@string/home_model_3"/>

                    <TextView
                        android:id="@+id/text_model_3_more"
                        style="@style/Home_MoreStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerview_model_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_model_4"
                        style="@style/Home_TextStyle"
                        android:text="@string/home_model_4"/>

                    <TextView
                        android:id="@+id/text_model_4_more"
                        style="@style/Home_MoreStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerview_model_4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_model_5"
                        style="@style/Home_TextStyle"
                        android:text="@string/home_model_5"/>

                    <TextView
                        android:id="@+id/text_model_5_more"
                        style="@style/Home_MoreStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerview_model_5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_model_6"
                        style="@style/Home_TextStyle"
                        android:text="@string/home_model_6"/>

                    <TextView
                        android:id="@+id/text_model_6_more"
                        style="@style/Home_MoreStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerview_model_6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>
</layout>
